--- a/CurriculoES.html
+++ b/CurriculoES.html
@@ -22,6 +22,11 @@
             font-size: 24px;
         }
 
+        .gif{
+            width: 50px;
+            height: auto;
+        }
+
         .blocos{
             max-width: 800px;
             margin: 20px auto;
@@ -45,9 +50,9 @@
 <body>
 
     <header>
-        <img src="https://media.giphy.com/media/zWrW2MElbSO6iifXdL/giphy.gif" alt="GIF">
+        <img class="gif" src="https://media.giphy.com/media/zWrW2MElbSO6iifXdL/giphy.gif" alt="GIF">
         Eduardo Sochodolak
-        <img src="https://media.giphy.com/media/zWrW2MElbSO6iifXdL/giphy.gif" alt="GIF">
+        <img class="gif" src="https://media.giphy.com/media/zWrW2MElbSO6iifXdL/giphy.gif" alt="GIF">
     </header>
 
     <div class="blocos">
